// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/boardSettingsPage/PropertyItem Snapshots should match snapshot for Status property (collapsed) 1`] = `
<div>
  <div
    class="PropertyItem"
  >
    <div
      class="PropertyItem__header"
    >
      <button
        class="IconButton"
        type="button"
      >
        <i
          class="CompassIcon icon-chevron-right ChevronRightIcon"
        />
      </button>
      <div
        class="PropertyItem__name"
      >
        <input
          class="Editable readonly "
          placeholder="Property name"
          readonly=""
          title="Status"
          value="Status"
        />
      </div>
      <div
        class="PropertyItem__type"
      >
        Select
      </div>
      <div
        class="PropertyItem__actions"
      >
        <button
          aria-label="Status property cannot be deleted"
          class="IconButton PropertyItem__lock-icon"
          title="Status property cannot be deleted"
          type="button"
        >
          <i
            class="CompassIcon icon-lock-outline LockOutlineIcon"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`pages/boardSettingsPage/PropertyItem Snapshots should match snapshot for Status property (expanded) 1`] = `
<div>
  <div
    class="PropertyItem"
  >
    <div
      class="PropertyItem__header"
    >
      <button
        class="IconButton"
        type="button"
      >
        <i
          class="CompassIcon icon-chevron-down ChevronDownIcon"
        />
      </button>
      <div
        class="PropertyItem__name"
      >
        <input
          class="Editable readonly "
          placeholder="Property name"
          readonly=""
          title="Status"
          value="Status"
        />
      </div>
      <div
        class="PropertyItem__type"
      >
        Select
      </div>
      <div
        class="PropertyItem__actions"
      >
        <button
          aria-label="Status property cannot be deleted"
          class="IconButton PropertyItem__lock-icon"
          title="Status property cannot be deleted"
          type="button"
        >
          <i
            class="CompassIcon icon-lock-outline LockOutlineIcon"
          />
        </button>
      </div>
    </div>
    <div
      class="PropertyItem__details"
    >
      <div
        class="PropertyItem__field PropertyItem__field--checkbox"
      >
        <label
          class="PropertyItem__checkbox-label"
        >
          <input
            type="checkbox"
          />
          Hide this property if empty
        </label>
      </div>
      <div
        class="PropertyItem__field"
      >
        <label
          class="PropertyItem__label"
        >
          Sort Rule
        </label>
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            class="PropertyItem__dropdown"
          >
            Default (alphabetical)
          </button>
        </div>
      </div>
      <div
        class="PropertyOptionsEditor"
      >
        <div
          class="PropertyOptionsEditor__header"
        >
          Options
        </div>
        <div
          class="PropertyOptionsEditor__list"
        >
          <div
            class="PropertyOptionsEditor__option"
          >
            <div
              class="PropertyOptionsEditor__option-color"
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  class="PropertyOptionsEditor__color-button propColorDefault"
                  type="button"
                >
                  <span
                    class="PropertyOptionsEditor__color-swatch propColorDefault"
                  />
                  Default
                </button>
              </div>
            </div>
            <div
              class="PropertyOptionsEditor__option-value"
            >
              <input
                class="Editable "
                placeholder="Option value"
                title="Todo"
                value="Todo"
              />
            </div>
            <div
              class="PropertyOptionsEditor__option-tag"
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  class="PropertyItem__dropdown"
                  type="button"
                >
                  No tag
                </button>
              </div>
            </div>
            <div
              class="PropertyOptionsEditor__option-actions"
            >
              <button
                class="IconButton"
                type="button"
              >
                <svg
                  class="SortDownIcon Icon"
                  viewBox="0 0 100 100"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polyline
                    points="50,20 50,80"
                  />
                  <polyline
                    points="30,60 50,80 70,60"
                  />
                </svg>
              </button>
              <button
                class="IconButton"
                type="button"
              >
                <i
                  class="CompassIcon icon-trash-can-outline DeleteIcon trash-can-outline"
                />
              </button>
            </div>
          </div>
          <div
            class="PropertyOptionsEditor__option"
          >
            <div
              class="PropertyOptionsEditor__option-color"
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  class="PropertyOptionsEditor__color-button propColorGreen"
                  type="button"
                >
                  <span
                    class="PropertyOptionsEditor__color-swatch propColorGreen"
                  />
                  Green
                </button>
              </div>
            </div>
            <div
              class="PropertyOptionsEditor__option-value"
            >
              <input
                class="Editable "
                placeholder="Option value"
                title="Done"
                value="Done"
              />
            </div>
            <div
              class="PropertyOptionsEditor__option-tag"
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  class="PropertyItem__dropdown"
                  type="button"
                >
                  No tag
                </button>
              </div>
            </div>
            <div
              class="PropertyOptionsEditor__option-actions"
            >
              <button
                class="IconButton"
                type="button"
              >
                <svg
                  class="SortUpIcon Icon"
                  viewBox="0 0 100 100"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polyline
                    points="50,20 50,80"
                  />
                  <polyline
                    points="30,40 50,20 70,40"
                  />
                </svg>
              </button>
              <button
                class="IconButton"
                type="button"
              >
                <i
                  class="CompassIcon icon-trash-can-outline DeleteIcon trash-can-outline"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="PropertyOptionsEditor__add"
        >
          <button
            class="Button"
            type="button"
          >
            <span>
              + Add Option
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pages/boardSettingsPage/PropertyItem Snapshots should match snapshot for non-Status property with delete button 1`] = `
<div>
  <div
    class="PropertyItem"
  >
    <div
      class="PropertyItem__header"
    >
      <button
        class="IconButton"
        type="button"
      >
        <i
          class="CompassIcon icon-chevron-right ChevronRightIcon"
        />
      </button>
      <div
        class="PropertyItem__name"
      >
        <input
          class="Editable "
          placeholder="Property name"
          title="Priority"
          value="Priority"
        />
      </div>
      <div
        class="PropertyItem__type"
      >
        Select
      </div>
      <div
        class="PropertyItem__actions"
      >
        <button
          class="IconButton"
          type="button"
        >
          <i
            class="CompassIcon icon-trash-can-outline DeleteIcon trash-can-outline"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
